fix details flex on mobile

--- a/src/app/product/details/details.component.css
+++ b/src/app/product/details/details.component.css
@@ -8,7 +8,7 @@
 }
 
 .product-image img {
-  max-width: 500px;
+  max-width: 350px;
   height: auto;
   border: 1px solid #ccc;
   border-radius: 10px;
@@ -69,4 +69,13 @@
 
 .add-to-cart-btn:hover {
   background-color: #0056b3;
+}
+
+@media screen and (max-width: 768px) {
+  .product-details {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 350px;
+  }
 }
